# data_engineering_zoomcamp

./: .gitignore  README.md  pyproject.toml
hw1/: README.md  ingest_data_parquet.ipynb  ingest_data_parquet.py  pyproject.toml
hw1/pipeline/: ingest_data_parquet.py
hw2/: zoomcamp.05_postgres_taxi_parent.yaml
hw3/: HW.md  docker-compose.yaml
hw3/config/: airflow.cfg
hw3/dags/: function_dag.py  function_dag2.py
hw4/: dbt_project.yml
hw4/analyses/: q5.sql
hw4/models/staging/: schema.yml  sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
hw6/: hw6.ipynb
hw7/: docker-compose.yml  hw7.ipynb  main.py  session_job.py
my-dlt-pipeline/: open_library_pipeline.py
my-pipeline/pipeline/: pipeline.yml
my-pipeline/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
my-pipeline/pipeline/assets/reports/: trips_report.sql
my-pipeline/pipeline/assets/staging/: trips.sql
pipeline/: ingest_data.py
taxi-pipeline/: taxi_pipeline.py
